@startuml

class IncentivosJob {
  - incentivosService: IncentivosService
  - rankingRepository: RankingMensualRepository
  + revisarRachasCadaTreintaDias(): void
  + calcularRankingMensual(): void
}

class IncentivosService {
  - repositorio: IncentivosRepositorioEnMemoria
  - notificacionClient: NotificacionClient
  - n8nWebhookClient: N8nWebhookClient
  - validator: IncentivosValidator
  + obtenerPerfil(donanteId): Donante
  + obtenerMisiones(donanteId): List<Mision>
  + obtenerInsignias(donanteId): List<InsigniaObtenida>
  + obtenerRankingMensualActual(): RankingMensual
  + obtenerPosicionRankingActual(donanteId): int
  + revisarRachas(): void
  + procesarDonacion(donanteId, donacion: DonacionRegistrada, destinatario: String, medio: String): void
  + procesarDonacionExitosa(donanteId, donacion: DonacionRegistrada, destinatario: String, medio: String): void
}

class NotificacionClient {
}

class N8nWebhookClient {
}

class IncentivosValidator {
}

class IncentivosRepositorioEnMemoria {
}

class RankingMensualRepository {
}

IncentivosJob -- IncentivosService
IncentivosJob -- RankingMensualRepository

IncentivosService -- NotificacionClient
IncentivosService -- N8nWebhookClient
IncentivosService -- IncentivosValidator
IncentivosService -- IncentivosRepositorioEnMemoria

@enduml